# bergman_periodic_solution

./: array_check.py  fft_test.py  gauss_quad.py  main.py  main2.py  notes  periodicPoreArray.py
Results_a=10.0um_r=5.0um_rho=0.0_N=5/: echoes_t=1.0ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=10.0ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=3.0ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=60.0ms_a=10.0um_r=5.0um_rho=0.0.json
cpp/: bergman  install_bergman.sh  run_bergman.sh
cpp/input/: bergman_conf
cpp/src/: BergmanSolution_config.h.in  CMakeLists.txt  main.cpp
cpp/src/LSA/: CMakeLists.txt  LeastSquareAdjust.cpp  LeastSquareAdjust.h
cpp/src/datavis/: bergman_plot.py
early/: README.md  main.py  periodicPoreArray.py
python/: main2.py
python/Results_a=1.0um_r=0.5um_rho=0.0_N=3/: echoes_t=0.001ms_a=1.0um_r=0.5um_rho=0.0.json  echoes_t=0.003ms_a=1.0um_r=0.5um_rho=0.0.json  echoes_t=0.01ms_a=1.0um_r=0.5um_rho=0.0.json  echoes_t=0.03ms_a=1.0um_r=0.5um_rho=0.0.json  echoes_t=0.1ms_a=1.0um_r=0.5um_rho=0.0.json  echoes_t=0.3ms_a=1.0um_r=0.5um_rho=0.0.json  echoes_t=0.6ms_a=1.0um_r=0.5um_rho=0.0.json  echoes_t=1.0ms_a=1.0um_r=0.5um_rho=0.0.json
python/Results_a=10.0um_r=5.0um_rho=0.0_N=2/: echoes_t=0.1ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=0.3ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=1.0ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=10.0ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=100.0ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=3.0ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=30.0ms_a=10.0um_r=5.0um_rho=0.0.json  echoes_t=60.0ms_a=10.0um_r=5.0um_rho=0.0.json
(+22 files in other folders)
